# YVM-SLAM

./: .gitignore  AGENTS.md  CMakeLists.txt  CameraTrajectory_sec.txt  Changelog.md  Dependencies.md  README.md  build.sh  build.sh.bak
Examples/: REAMDME.md
Examples/RGB-D/: RS1280x720.yaml  RS640x480.yaml  RealSense_D435i.yaml  TUM3.yaml  rgbd_realsense_D435i.cc  rgbd_tum.cc
Examples/ROS2/: dual_loop.launch.py  rtabmap_clean.yaml  semantic_map.rviz  semantic_marker_node.py  user_input.py  vlm_chat_ui.py  vlm_supervisor_node.py  vlm_web_ui.py  yolo_world_mask_node.py
Examples_old/: REAMDME.md
include/: DebugFlags.h  Map.h  MapDrawer.h  MapObject.h  ObjectOptimizer.h  System.h  Tracking.h  Viewer.h  YoloDetect.h  yolov8_seg_onnx.h
picture/: status_log.txt
src/: DebugFlags.cc  Map.cc  MapDrawer.cc  MapObject.cc  ObjectOptimizer.cc  System.cc  Tracking.cc  Viewer.cc  YoloDetect.cpp  yolov8_seg_onnx.cpp  yolov8_utils.cpp
tools/: downscale_tum.py  rebuild_yvm_docs_balanced.py  rebuild_yvm_docs_practical.py  rebuild_yvm_docs_with_diagrams.py  rosbag2_to_tum.py
